2009-05-19  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler and Brady Eidson.

        <rdar://problem/6900582> REGRESSION (r42446?): UA Profiler in http://stevesouders.com/ua/ stalls

        The problem was that Document::removeAllEventListeners() was called for a wrong document
        when a CachedFrame was destroyed.

        Cannot be tested automatically, because DRT doesn't have a b/f cache.

        * dom/Document.cpp: (WebCore::Document::domWindow): Make sure that this doesn't return an
        unrelated window even if document's m_frame pointer is stale.

        * history/CachedFrame.cpp: (WebCore::CachedFrame::clear): Added a FIXME about strange behavior.

2009-05-19  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Split InspectorController into InspectorController and InspectorFrontend. Latter encapsulates all frontend interaction and is the only entity allowed to make ScriptFunctionCalls. The further plan is to serialize these script function calls.

        https://bugs.webkit.org/show_bug.cgi?id=25419

        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
        * inspector/ConsoleMessage.cpp:
        (WebCore::ConsoleMessage::addToConsole):
        * inspector/ConsoleMessage.h:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::~InspectorController):
        (WebCore::InspectorController::inspect):
        (WebCore::InspectorController::focusNode):
        (WebCore::InspectorController::setWindowVisible):
        (WebCore::InspectorController::addConsoleMessage):
        (WebCore::InspectorController::setAttachedWindow):
        (WebCore::InspectorController::inspectedWindowScriptObjectCleared):
        (WebCore::InspectorController::scriptObjectReady):
        (WebCore::InspectorController::showPanel):